update my/HD630/oc6.7 to release version update my/HD630/oc6.7 核显帧缓冲到2.0ghz

--- a/my/HD630/oc6.7/EFI/OC/config.plist
+++ b/my/HD630/oc6.7/EFI/OC/config.plist
@@ -223,6 +223,8 @@
 			<dict>
 				<key>AAPL,ig-platform-id</key>
 				<data>BwCbPg==</data>
+				<key>framebuffer-patch-enable</key>
+				<data>AQAAAA==</data>
 				<key>framebuffer-con0-alldata</key>
 				<data>AQAJAAAEAADHAwAA</data>
 				<key>framebuffer-con0-enable</key>
@@ -235,10 +237,12 @@
 				<data>AwQIAAAIAADHAwAA</data>
 				<key>framebuffer-con2-enable</key>
 				<data>AQAAAA==</data>
-				<key>framebuffer-patch-enable</key>
-				<data>AQAAAA==</data>
 				<key>framebuffer-stolenmem</key>
 				<data>AAAwAQ==</data>
+				<key>framebuffer-unifiedmem</key>
+				<data>AAAAgA==</data>
+				<key>framebuffer-fbmem</key>
+				<data>AACQAA==</data>
 				<key>enable-hdmi-dividers-fix</key>
 				<data>AQAAAA==</data>
 				<key>enable-max-pixel-clock-override</key>
@@ -751,9 +755,9 @@
 		<key>Debug</key>
 		<dict>
 			<key>AppleDebug</key>
-			<true/>
+			<false/>
 			<key>ApplePanic</key>
-			<true/>
+			<false/>
 			<key>DisableWatchDog</key>
 			<false/>
 			<key>DisplayDelay</key>
@@ -765,7 +769,7 @@
 			<key>SysReport</key>
 			<false/>
 			<key>Target</key>
-			<integer>67</integer>
+			<integer>0</integer>
 		</dict>
 		<key>Entries</key>
 		<array>
@@ -896,7 +900,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>-v keepsyms=1 debug=0x100 igfxonln=1
+				<string>igfxonln=1
  -wegnoegpu
 </string>
 				<key>csr-active-config</key>
