--- a/my/RX460/oc6.7/EFI/OC/config.plist
+++ b/my/RX460/oc6.7/EFI/OC/config.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>#WARNING - 1</key>
-	<string>This is Imac19.1 Z390-GAMING-X + i7 9700k + UHD630</string>
+	<string>This is Imac19.1 Z390-GAMING-X + i7 9700k + RX460</string>
 	<key>ACPI</key>
 	<dict>
 		<key>Add</key>
@@ -884,7 +884,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>-v</string>
+				<string>-v keepsyms=1 debug=0x100</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
