--- a/pzh/UHD630/oc6.7/EFI/OC/config.plist
+++ b/pzh/UHD630/oc6.7/EFI/OC/config.plist
@@ -665,7 +665,7 @@
 			<key>AppleCpuPmCfgLock</key>
 			<false/>
 			<key>AppleXcpmCfgLock</key>
-			<true/>
+			<false/>
 			<key>AppleXcpmExtraMsrs</key>
 			<false/>
 			<key>AppleXcpmForceBoost</key>
